-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 240601) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.1 *-

??062001 (v2.0.2)  -** stable release **-
 	- added: current position tracking to loop devices
	- added: more verbose xrun info from ALSA 0.9.x devices
	- changed: improved configure checks for python include 
		   and library directories
	- changed: -tl now works without -t
	- fixed: selecting a non-existant chainsetup could crash 
		 ecasound
	- fixed: --enable-audiofile actually disabled the use of 
		 libaudiofile (!)
	- fixed: ecaplay - if ecaplay is unable to play a file, 
		 instead of exiting it now skips to the next file
	- fixed: giving a non-integer number of delays to -etd 
		 caused  a seg.fault
	- fixed: eiam - issuing copp-select + copp-get caused
		 a crash if no cop was selected
	- fixed: bugs in handling infinite length ewf sources
05062001 (v2.0.1)  -** stable release **-
	- added: ecasoundrc - default-to-internal-buffering; select
		 the default between -z:intbuf and -z:nointbuf
	- added: alternative C ECI implementation providing reentrant
		 access to the library; the new routines have a '_r' 
		 postfix and are located in libecasoundc [ajeanneau]
	- changed: completely rewritten mp3 header parsing; should 
		   fix most of the compatibility problems